@@ -2,9 +2,39 @@ package com.hifiremote.jp1;
 
 import java.awt.Color;
 
-public interface Highlight
+public class Highlight
 {
-  public Color getHighlight();
+  private int memoryUsage = 0;
   
-  public void setHighlight( Color color );
+  private Color highlight = Color.WHITE;
+  
+  public Color getHighlight()
+  {
+    return highlight;
+  }
+  
+  public void setHighlight( Color highlight )
+  {
+    this.highlight = highlight;
+  }
+  
+  public int getMemoryUsage()
+  {
+    return memoryUsage;
+  }
+
+  public void clearMemoryUsage()
+  {
+    memoryUsage = 0;
+  }
+  
+  public void setMemoryUsage( int memoryUsage )
+  {
+    this.memoryUsage = memoryUsage;
+  }
+  
+  public void addMemoryUsage( int memoryUsage )
+  {
+    this.memoryUsage += memoryUsage;
+  }
 }
